作用域和上下文环境.修改

--- a/作用域和上下文环境.md
+++ b/作用域和上下文环境.md
@@ -7,6 +7,20 @@
 广义上来说作用域是一套用来存储变量，并且之后可以方便的找到这些变量的规则。
 
 作用域负责收集并维护由所有声明的标识符组成的一系列查询，并实施一套非常严格的规则，确定当前执行的代码对这些标识符的访问权限javascript中最普遍的作用域是函数作用域。
+
+	var a=3; //全局变量
+	function fn(b){ //局部变量
+	    c=2; //全局变量
+	    var d=5; //局部变量
+	    function subFn(){
+	        var e=d; //父函数的局部变量对子函数可见
+	        for(var i=0;i<3;i++){
+	            console.write(i);
+	        }
+	        alert(i);//3, 在for循环内声明，循环外function内仍然可见，没有块作用域
+	    }
+	}
+	alert(c); //在function内声明但不带var修饰，仍然是全局变量
  
 ### 什么是上下文环境： ###
 
