原型与原型链

--- a/原型与原型链.md
+++ b/原型与原型链.md
@@ -21,3 +21,7 @@
     Object.prototype的隐式原型__proto__null。（原型链的头）
     
     函数的prototype一般情况下都是一个{}，自定义函数都是{}，内置函数都是它自己对应的实例对象。他们的__proto__ 共同指向Object.prototype， 所以从一定意义上来说 函数的prototype一般情况下都是一个{}。
+
+### 原型与原型链图解 ###
+
+![原型与原型链](http://i.imgur.com/luP6mDj.png)
