作用域和上下文环境.md

--- a/作用域和上下文环境.md
+++ b/作用域和上下文环境.md
@@ -21,6 +21,10 @@
 	    }
 	}
 	alert(c); //在function内声明但不带var修饰，仍然是全局变量
+
+### 作用域图解 ###
+
+![作用域与作用域链和变量查找](http://i.imgur.com/AdWKV7V.png)
  
 ### 什么是上下文环境： ###
 
